# charity-donors-ml

./: pyproject.toml
charity_ml_newest/: finding_donors.html
charity_ml_newest/.ipynb_checkpoints/: finding_donors-checkpoint.ipynb
finding_donors/: finding_donors.ipynb
tests/: test_charity_ml_newest.py
