[tool.poetry]
name = "charity-ml-newest"
version = "0.1.0"
description = ""
authors = ["kit <kit@humn.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
matplotlib = "^3.5.0"
jupyter = "^1.0.0"
notebook = "^6.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
